--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,3 +5,6 @@
 // Base (reset, styles globaux)
 @import url("./base/_reset.scss");
 @import url("./base/_typography.scss");
+
+// components
+@import url("./components/_sidebar.scss");
