Submenu animate v2 && initialized variables

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,16 +1,14 @@
 // Couleurs
-$primary: #007bff;
-$secondary: #6c757d;
+$primary: #0088ff;
+$secondary: rgba(204, 204, 204, 0.24);
+$text-1: #292929;
+$text-2: #5b5b5b;
 $success: #28a745;
 $error: #dc3545;
 $warning: #ffc107;
-$light: #f8f9fa;
+$light: #fafafa;
+$light-2: #f4f4f4;
 $dark: #343a40;
-
-// Typographie
-$font-size-basic: 16px;
-$font-size-title: 24px;
-$font-size-subtitle: 20px;
 
 // Breakpoints Responsive
 $breakpoints: (
