--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -1,3 +1,5 @@
+@use "../abstracts/variables" as *;
+
 * {
   padding: 0;
   margin: 0;
@@ -8,4 +10,5 @@
 body {
   width: 100vw;
   min-height: 100vh;
+  background: $light-2;
 }
