--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -2,7 +2,8 @@
 
 .sidebar {
   padding: 20px 10px 0 10px;
-  width: 300px;
+  min-width: 250px;
+  width: 20%;
   height: 100vh;
   background: $light;
   position: fixed;
@@ -10,85 +11,90 @@
   flex-direction: column;
   justify-content: space-between;
 
-  .head {
-    padding: 20px;
+  .top {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
 
-    h1 {
-      color: $text-1;
-      font-size: 1.7rem;
-      font-weight: 500;
-    }
-    svg {
-      transform: rotate(180deg);
-    }
-  }
-  .links {
-    ul {
+    .head {
+      padding: 20px;
       display: flex;
-      flex-direction: column;
-      gap: 1.5rem;
-      padding-left: 20px;
+      justify-content: space-between;
+      align-items: center;
 
-      li {
-        width: 80%;
-        height: 40px;
-        padding: 0 10px;
-        border-radius: 5px;
-        display: flex;
-        align-items: center;
-        transition: background-color 0.3s ease-out;
-
-        &:hover {
-          background: $secondary;
-        }
+      h1 {
+        color: $text-1;
+        font-size: 1.7rem;
+        font-weight: 500;
       }
-      li.active {
-        color: $primary;
-        background: $secondary;
+      svg {
+        transform: rotate(180deg);
       }
-      .lin {
-        display: flex;
-        gap: 10px;
-      }
-      li a,
-      li p {
-        width: 100%;
-        font-size: 1.2rem;
-        color: $text-2;
-        cursor: pointer;
-        display: flex;
-        align-items: center;
-        gap: 10px;
-      }
-      li a.active {
-        color: $primary;
-      }
-      .dropdown-menu {
-        overflow: hidden;
-        display: flex;
-        justify-content: space-between;
-        gap: 30px;
-      }
-      .dropdown-menu.active-menu {
-        .arrow {
-          transform: rotate(180deg);
-        }
-      }
-      .dropdown {
+    }
+    .links {
+      padding-top: 50px;
+      ul {
         display: flex;
         flex-direction: column;
-        overflow: hidden;
-        gap: 20px;
-        border-left: 1px solid #5b5b5b34;
-        margin-left: 20px;
+        gap: 1.5rem;
         padding-left: 20px;
+
+        li {
+          width: 80%;
+          height: 40px;
+          padding: 0 10px;
+          border-radius: 5px;
+          display: flex;
+          align-items: center;
+          transition: background-color 0.3s ease-out;
+
+          &:hover {
+            background: $secondary;
+          }
+        }
+        li.active {
+          color: $primary;
+          background: $secondary;
+        }
+        .lin {
+          display: flex;
+          gap: 10px;
+        }
+        li a,
+        li p {
+          width: 100%;
+          font-size: 1.2rem;
+          color: $text-2;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          gap: 10px;
+        }
+        li a.active {
+          color: $primary;
+        }
+        .dropdown-menu {
+          overflow: hidden;
+          display: flex;
+          justify-content: space-between;
+          gap: 30px;
+        }
+        .dropdown-menu.active-menu {
+          .arrow {
+            transform: rotate(180deg);
+          }
+        }
+        .dropdown {
+          display: flex;
+          flex-direction: column;
+          overflow: hidden;
+          gap: 20px;
+          border-left: 1px solid #5b5b5b34;
+          margin-left: 20px;
+          padding-left: 20px;
+        }
       }
     }
   }
-
   .bottom {
     margin-bottom: 10%;
     padding-left: 20px;
