optimisation & login page created

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -1,14 +1,14 @@
 // Couleurs
-$primary: #0088ff;
-$secondary: rgba(204, 204, 204, 0.24);
-$text-1: #292929;
-$text-2: #5b5b5b;
+$primary: #1e2122;
+$secondary: #1b1d1e;
+$terciary: #1e1e1e;
+$text-1: #fafafa;
+$text-2: #ccc;
+$input-border: #cccccc61;
 $success: #28a745;
 $error: #dc3545;
 $warning: #ffc107;
-$light: #fafafa;
-$light-2: #f4f4f4;
-$dark: #343a40;
+$default: #2c6dee;
 
 // Breakpoints Responsive
 $breakpoints: (
