--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -5,7 +5,7 @@
   min-width: 250px;
   width: 20%;
   height: 100vh;
-  background: $light;
+  background: $secondary;
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -109,7 +109,7 @@
       align-items: center;
       justify-content: center;
       border-radius: 10px;
-      color: $light;
+      color: $text-1;
       background: $primary;
     }
 
