sidebar added (responsive && animated)

--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -11,9 +11,9 @@ $warning: #ffc107;
 $default: #2c6dee;
 
 // Breakpoints Responsive
-$breakpoints: (
-  "sm": 576px,
-  "md": 768px,
-  "lg": 992px,
-  "xl": 1200px,
-);
+// $breakpoints: (
+//   "sm": 576px,
+//   "md": 768px,
+//   "lg": 992px,
+//   "xl": 1200px,
+// );
