--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -24,6 +24,10 @@
   position: relative;
   color: $text-1;
   font-weight: 600;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 10px;
   background: $special;
   border-radius: 5px;
   border: 1px solid $input-border;
