--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -1,10 +1,13 @@
-.container {
-    width: calc(100% - 25%);
-    min-height: 100vh;
+@use "../abstracts/variables" as *;
 
-    .box {
-        width: 100%;
-        height: 100vh;
-        background: #000;
-    }
+.container {
+  width: calc(100% - 25%);
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: auto 1fr;
+}
+@media screen and (max-width: 800px) {
+  .container {
+    grid-template-columns: 1fr;
+  }
 }
