--- a/src/styles/pages/_dashboard.scss
+++ b/src/styles/pages/_dashboard.scss
@@ -1,13 +1,59 @@
 @use "../abstracts/variables" as *;
 
-.container {
-  width: calc(100% - 25%);
-  min-height: 100vh;
-  display: grid;
-  grid-template-columns: auto 1fr;
+.dashboard {
+  display: flex;
+  width: 100%;
+  height: 100vh;
+
+  .content {
+    flex: 1;
+    padding: 3%;
+
+    .container {
+      width: 100%;
+      height: 100%;
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      gap: 8px;
+
+      .box {
+        border-radius: 8px;
+        background: $secondary;
+      }
+
+      .box-1 {
+        grid-area: 1 / 1 / 2 / 3;
+      }
+      .box-2 {
+        grid-area: 2 / 1 / 3 / 2;
+      }
+      .box-3 {
+        grid-area: 2 / 2 / 3 / 3;
+      }
+      .box-4 {
+        grid-area: 1 / 3 / 3 / 4;
+      }
+    }
+  }
 }
-@media screen and (max-width: 800px) {
+@media screen and (max-width: 1200px) {
   .container {
-    grid-template-columns: 1fr;
+    grid-template-columns: repeat(2, 1fr) !important;
+    grid-template-rows: repeat(3, 1fr) !important;
+  }
+  .box-3 {
+    grid-area: 3 / 1 / 4 / 2 !important;
+  }
+  .box-4 {
+    grid-area: 2 / 2 / 4 / 3 !important;
+  }
+}
+@media screen and (max-width: 768px) {
+  .box-3 {
+    grid-area: 2 / 2 / 3 / 3 !important;
+  }
+  .box-4 {
+    grid-area: 3 / 1 / 4 / 3 !important;
   }
 }
