configured pages & sidebar animation

--- a/src/styles/components/_sidebar.scss
+++ b/src/styles/components/_sidebar.scss
@@ -14,12 +14,23 @@
   overflow: hidden;
   transition: width 0.3s cubic-bezier(0.25, 0.1, 0.25, 1);
 
+  .active-indicator {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #cccccc24;
+    border-radius: 8px;
+    z-index: -1;
+  }
+
   ul {
     display: flex;
     flex-direction: column;
     gap: 1em;
 
     li a {
+      position: relative;
       display: flex;
       align-items: center;
       gap: 10px;
@@ -27,7 +38,7 @@
       color: $text-2;
       border-radius: 5px;
       padding: 10px;
-      transition: background 300ms ease-out;
+      transition: color 300ms ease-out;
 
       svg {
         flex-shrink: 0;
@@ -42,7 +53,7 @@
       }
 
       &:hover {
-        background: #cccccc24;
+        color: $default;
       }
     }
   }
@@ -62,7 +73,6 @@
 
   ul li a.active {
     color: $default;
-    background: #cccccc24;
   }
 
   .bottom {
