--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,8 +8,10 @@
 
 // components
 @import url("./components/_sidebar.scss");
+@import url("./components/_filtercategories.scss");
 
 // pages
 @import url("./pages/_dashboard.scss");
+@import url("./pages/_evaluations.scss");
 @import url("./pages/_login.scss");
 @import url("./pages/_notfound.scss");
