--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,6 +9,7 @@
 // components
 @import url("./components/_sidebar.scss");
 @import url("./components/_filtercategories.scss");
+@import url("./components/_evaluations.scss");
 
 // pages
 @import url("./pages/_dashboard.scss");
