--- a/src/styles/pages/_evaluations.scss
+++ b/src/styles/pages/_evaluations.scss
@@ -7,6 +7,8 @@
     flex: 1;
     padding: 3%;
     display: flex;
-    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1em;
   }
 }
